--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swift WASM Demo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div id="app">
     </div>
@@ -15,4 +18,5 @@
         init();
     </script>
 </body>
-</html> 
+
+</html>
